--- a/twit_nlp/templates/index.html
+++ b/twit_nlp/templates/index.html
@@ -3,8 +3,12 @@
 {% block content %}
 
 <div class="jumbotron">
-<h1 class="display-4">Hello, world!</h1>
-<hr class="my-4">
-<p>Stuff will go here</p>
+    <h1 class="display-4">Hello, world!</h1>
+    <hr class="my-4">
+    <p>Stuff will go here</p>
 </div>
+<form method="post">
+    {{form.as_p}}
+    <button type="submit" class="btn btn-info">Submit</button>
+</form>
 {% endblock %}
