--- a/twit_nlp/static/css/styles.css
+++ b/twit_nlp/static/css/styles.css
@@ -1,5 +1,9 @@
+body {
+    background-color: white;
+}
+
 .navbar {
-    background-color: darkorange;
+    background-color: darkslategrey;
     border-radius: 5px;
 }
 
