--- a/twit_nlp/templates/base.html
+++ b/twit_nlp/templates/base.html
@@ -18,7 +18,7 @@
 <header>
 <div class="container">
 <nav class="navbar navbar-dark">
-  <a class="navbar-brand" href="#">Twitter + NLTK</a>
+  <a class="navbar-brand" href="{% url 'index' %}">Twitter + NLTK</a>
 </nav>
 </div>
 </header>
