added sentiment column to results

--- a/twit_nlp/templates/results.html
+++ b/twit_nlp/templates/results.html
@@ -8,6 +8,7 @@
     <tr>
       <th scope="col">User</th>
       <th scope="col">Tweet text</th>
+      <th scope="col">Sentiment</th>
     </tr>
   </thead>
   <tbody>
