--- a/twit_nlp/templates/base.html
+++ b/twit_nlp/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="korpog">
 
-  <title>{% block title %}Twitter/NLP{% endblock title %}</title>
+  <title>{% block title %}Legomenon{% endblock title %}</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
@@ -18,7 +18,7 @@
 <header>
 <div class="container">
 <nav class="navbar navbar-dark">
-  <a class="navbar-brand" href="{% url 'index' %}">Twitter + NLTK</a>
+  <a class="navbar-brand" href="{% url 'index' %}">Legomenon</a>
 </nav>
 </div>
 </header>
