--- a/twit_nlp/templates/results.html
+++ b/twit_nlp/templates/results.html
@@ -12,8 +12,8 @@
     </tr>
   </thead>
   <tbody>
-    {% for tweet in tweets_dict %} <tr>
-      {% for key , value in tweet.items  %}
+    {% for tweet in tweets_data %} <tr>
+      {% for key, value in tweet.items %}
       <td>{{ value }}</td>
       {% endfor %}
     </tr>
