--- a/twit_nlp/templates/base.html
+++ b/twit_nlp/templates/base.html
@@ -10,7 +10,7 @@
   <meta name="author" content="korpog">
 
   <title>{% block title %}Legomenon{% endblock title %}</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 
@@ -35,7 +35,7 @@
 </div>
 </footer>
 
-<script src="{% static 'js/bootstrap.bundle.js'%}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
 <script src="{% static 'js/jquery-3.3.1.js'%}"></script>
 {% block javascript %}{% endblock %}
 </body>
