table cells with sentiment value are now colord based on its value

--- a/twit_nlp/static/css/styles.css
+++ b/twit_nlp/static/css/styles.css
@@ -2,6 +2,11 @@ body {
     background-color: white;
 }
 
+td.sentiment {
+    text-align: center;
+    vertical-align: middle;
+}
+
 .navbar {
     background-color: steelblue;
     border-radius: 5px;
