--- a/twit_nlp/templates/base.html
+++ b/twit_nlp/templates/base.html
@@ -35,7 +35,8 @@
 </div>
 </footer>
 
+{% block javascript %}
 <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
 <script src="{% static 'js/jquery-3.3.1.js'%}"></script>
-{% block javascript %}{% endblock %}
+{% endblock %}
 </body>
