--- a/twit_nlp/templates/results.html
+++ b/twit_nlp/templates/results.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Results{% endblock title %}
 
@@ -18,7 +19,11 @@
       {% endfor %}
     </tr>
     {% endfor %}
-
   </tbody>
 </table>
+{% endblock %}
+
+{% block javascript %}
+{{ block.super }}
+<script src="{% static 'js/results.js'%}"></script>
 {% endblock %}
