--- a/twit_nlp/templates/index.html
+++ b/twit_nlp/templates/index.html
@@ -1,34 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
 <div class="jumbotron">
     <h1 class="display-4">The Word As Power</h1>
+    <blockquote class="blockquote">
+        <p class="mb-0">The limits of my language mean the limits of my world.</p>
+        <footer class="blockquote-footer">Ludwig Wittgenstein</footer>
+    </blockquote>
     <hr class="my-2">
     <p>Enter your query and get most popular tweets with their positivity sentiment.<br>
-    Created with the help of <a href="https://www.nltk.org/_modules/nltk/sentiment/vader.html">Vader</a></p>
+        Created with the help of <a href="https://www.nltk.org/_modules/nltk/sentiment/vader.html">Vader</a></p>
 </div>
-<div class="d-flex justify-content-center" id="forms-panel">
-    <form method="post" class="form-inline">
-        {% csrf_token %}
-        <div class="input-group mb-2 mr-sm-2">
-            {{ form.non_field_errors }}
-            {{ form.query.errors }}
-            {{ form.query }}
+<div class="container">
+    <div class="row">
+        <div class="col text-center pt-3 index-panel" id="sentiment-box">
+            <a href="" class="btn btn-primary">Twitter Sentiment Analysis</a>
+            <p class="">Enter a query and find out which </p>
         </div>
-        <div class="input-group mb-2 mr-sm-2">
-            {{ form.non_field_errors }}
-            {{ form.num_of_tweets.errors }}
-            <div class="input-group-prepend">
-                <div class="input-group-text">How many tweets?</div>
-            </div>
-            {{ form.num_of_tweets }}
+        <div class="col text-center pt-3 index-panel" id="stats-box">
+            <a href="" class="btn btn-primary">Text Statistics</a>
+            <p>Get text statistics</p>
         </div>
-        <div class="input-group mb-2 mr-sm-2">
-            <button type="submit" class="btn btn-info">Go!</button>
-        </div>
-    </form>
-</div>
-{% endblock %}
-{% block javascript %}
-{% endblock %}
+    </div>
+    {% endblock %}
+    {% block javascript %}
+    {% endblock %}
