--- a/twit_nlp/static/css/styles.css
+++ b/twit_nlp/static/css/styles.css
@@ -34,8 +34,8 @@ td.sentiment {
 }
 
 #sentiment-form {
-    background-color: steelblue;
+    background: linear-gradient(to bottom, #ffd65e 0%, #febf04 100%);
     border-radius: 5px;
-    margin-top: 0;
+    margin-top: 0.1rem;
     padding: 1rem;
 }
