--- a/twit_nlp/templates/sentiment.html
+++ b/twit_nlp/templates/sentiment.html
@@ -20,7 +20,7 @@
             {{ form.num_of_tweets }}
         </div>
         <div class="input-group mb-2 mr-sm-2">
-            <button type="submit" class="btn btn-info">Go!</button>
+            <button type="submit" class="btn btn-success">Go!</button>
         </div>
     </form>
 </div>
