--- a/twit_nlp/templates/results_sentiment.html
+++ b/twit_nlp/templates/results_sentiment.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <table class="table table-bordered">
-  <thead class="thead-light">
+  <thead class="title-panel">
     <tr>
       <th scope="col">User</th>
       <th scope="col">Tweet text</th>
