--- a/twit_nlp/templates/sentiment.html
+++ b/twit_nlp/templates/sentiment.html
@@ -3,7 +3,14 @@
 {% block title %}Twitter Sentiment Analysis{% endblock %}
 
 {% block content %}
-<div class="d-flex justify-content-center" id="sentiment-form">
+<div class="container">
+    <div class="row py-1 my-0 justify-content-center title-panel">
+        <h3 class="pt-2">
+            Twitter Sentiment Analysis
+        </h3>
+    </div>
+
+<div class="row my-0 justify-content-center" id="my-form">
     <form method="post" class="form-inline">
         {% csrf_token %}
         <div class="input-group mb-2 mr-sm-2">
@@ -23,5 +30,6 @@
             <button type="submit" class="btn btn-success">Go!</button>
         </div>
     </form>
+</div>
 </div>
 {% endblock %}
