added textarea input to text statistics

--- a/twit_nlp/templates/index.html
+++ b/twit_nlp/templates/index.html
@@ -9,7 +9,8 @@
     </blockquote>
     <hr class="my-2">
     <p>Enter your query and get most popular tweets with their positivity sentiment.<br>
-        Created with the help of <a href="https://www.nltk.org/_modules/nltk/sentiment/vader.html">Vader</a></p>
+        Created with <a href="https://www.nltk.org">NLTK</a>
+        and <a href="https://www.nltk.org/_modules/nltk/sentiment/vader.html">Vader</a></p>
 </div>
 <div class="container">
     <div class="row">
