--- a/twit_nlp/templates/results_sentiment.html
+++ b/twit_nlp/templates/results_sentiment.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Results{% endblock title %}
+{% block title %}Results - Sentiment{% endblock title %}
 
 {% block content %}
 <table class="table table-bordered">
   <thead class="title-panel">
     <tr>
       <th scope="col">User</th>
-      <th scope="col">Tweet text</th>
+      <th scope="col">Tweet</th>
       <th scope="col">Sentiment</th>
     </tr>
   </thead>
