--- a/twit_nlp/templates/index.html
+++ b/twit_nlp/templates/index.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center py-3 index-panel" id="sentiment-box">
-            <a href="{% url 'sentiment' %}" class="btn btn-primary btn-lg">Twitter Sentiment Analysis</a>
+            <a href="{% url 'sentiment' %}" class="btn btn-primary btn-lg">Sentiment Analysis</a>
         </div>
         <div class="col text-center py-3 index-panel" id="stats-box">
             <a href="{% url 'statistics' %}" class="btn btn-primary btn-lg">Text Statistics</a>
