--- a/twit_nlp/templates/base.html
+++ b/twit_nlp/templates/base.html
@@ -16,7 +16,7 @@
 
 <body>
 <header>
-<div class="container">
+<div class="container mt-2">
 <nav class="navbar navbar-dark">
   <a class="navbar-brand" href="{% url 'index' %}">Legomenon</a>
 </nav>
