--- a/twit_nlp/templates/index.html
+++ b/twit_nlp/templates/index.html
@@ -2,22 +2,45 @@
 
 {% block content %}
 <div class="jumbotron">
-    <h1 class="display-4">The Word As Power</h1>
+    <h1 class="display-4">Twitter Sentiment Analysis</h1>
     <blockquote class="blockquote">
         <p class="mb-0">I know words. I have the best words!</p>
         <footer class="blockquote-footer">Donald Trump</footer>
     </blockquote>
     <hr class="my-2">
-    <p>Enter your query and get most popular tweets with their positivity sentiment.<br>
+    <p>Enter your query and get a list of tweets with their positivity sentiment.<br>
         Created with <a href="https://www.nltk.org">NLTK</a>
         and <a href="https://www.nltk.org/_modules/nltk/sentiment/vader.html">Vader</a></p>
 </div>
 <div class="container">
-    <div class="row">
-        <div class="col text-center py-3 index-panel" id="sentiment-box">
-            <a href="{% url 'sentiment' %}" class="btn btn-primary btn-lg">Sentiment Analysis</a>
-        </div>
+    <div class="row my-0 justify-content-center" id="my-form">
+        <form method="post" class="form-inline">
+            {% csrf_token %}
+            <div class="input-group mb-2 mr-sm-2">
+                {{ form.non_field_errors }}
+                {{ form.query.errors }}
+                {{ form.query }}
+            </div>
+            <div class="input-group mb-2 mr-sm-2">
+                {{ form.non_field_errors }}
+                {{ form.num_of_tweets.errors }}
+                <div class="input-group-prepend">
+                    <div class="input-group-text">How many tweets?</div>
+                </div>
+                {{ form.num_of_tweets }}
+            </div>
+            <div class="input-group mb-2 mr-sm-2">
+                {{ form.non_field_errors }}
+                {{ form.result_type.errors }}
+                {{ form.result_type }}
+            </div>
+            <div class="input-group mb-2 mr-sm-2">
+                <button type="submit" class="btn btn-success">Go!</button>
+            </div>
+        </form>
     </div>
+</div>
 {% endblock %}
+
 {% block javascript %}
 {% endblock %}
